services/external-citizen-register/manifests/test/external-citizen-register-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-citizen-register-api
  namespace: citizens-folder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-citizen-register-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: external-citizen-register-api
    spec:
      containers:
      - name: external-citizen-register-api
        image: spbpatino/citizens-folder-external-citizen-register:latest
        imagePullPolicy: Always
        #envFrom:
        #- configMapRef:
        #    name: external-citizen-register-api
        #- secretRef:
        #    name: external-citizen-register-api
        ports:
        - containerPort: 8250
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /api/info
            port: 8250
        livenessProbe:
          httpGet:
            path: /api/info
            port: 8250
