services/external-citizen-register/manifests/test/external-citizen-register-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: external-citizen-register-api
  name: external-citizen-register-api
  namespace: citizens-folder
spec:
  selector:
    app: external-citizen-register-api
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8250
